--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "intl": "^1.2.5",
     "jquery": "^3.2.1",
+    "popper.js": "^1.12.9",
     "rxjs": "^5.4.2",
     "tether": "^1.4.1",
     "zone.js": "^0.8.14"
